# nomad

./: .cirrus.yml  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  README.txt  ROADMAP.md  test.txt
examples/: CMakeLists.txt
examples/c_api/: example1_c_api.c  example2_c_api.c
ext/sgtelib/: .gitignore  CMakeLists.txt  CMakeListsLibs.txt  CMakeListsLibsStatic.txt
interfaces/CInterface/: CMakeLists.txt  NomadStdCInterface.cpp  NomadStdCInterface.h
interfaces/Matlab_MEX/: .gitignore  CMakeLists.txt  GERAD_NOMAD_build.m  readme.txt  test_nomad_gerad.m
interfaces/PyNomad/: .gitignore  CMakeLists.txt  MANIFEST.in  PyNomad.pyx  long_description.md  makefile  nomadCySimpleInterface.cpp  pyproject.toml  readme.txt  runTest.py  runTestInfoHelp.py  runTest_BlockEval.py  runTest_PbWithConst.py  runTest_WithSurrogate.py  setup.py  setup_PyNomad.py  setup_PyNomadStatic.py
interfaces/jNomad/: .gitignore  CMakeLists.txt  Readme  jNomad.i
src/: CMakeLists.txt  CMakeListsExes.txt  CMakeListsExesStatic.txt  CMakeListsLibs.txt  CMakeListsLibsStatic.txt  makefile  nomad_nsbegin.hpp  nomad_nsend.hpp  nomad_platform.hpp  nomad_version.hpp
src/Algos/: AlgoStats.cpp  AlgoStats.hpp  AlgoStopReasons.hpp  Algorithm.cpp  Algorithm.hpp  AllStopReasons.hpp  CacheInterface.cpp  CacheInterface.hpp  EvcInterface.cpp  EvcInterface.hpp  Initialization.cpp  Initialization.hpp  Iteration.cpp  Iteration.hpp  IterationUtils.cpp  IterationUtils.hpp  MainStep.cpp  MainStep.hpp  MegaIteration.cpp  MegaIteration.hpp  MeshBase.cpp  MeshBase.hpp  Projection.cpp  Projection.hpp  Step.cpp  Step.hpp  Subproblem.cpp  Subproblem.hpp  SubproblemManager.cpp  SubproblemManager.hpp  SurrogateEvaluation.cpp  SurrogateEvaluation.hpp  SurrogateEvaluator.hpp  Termination.cpp  Termination.hpp  TrialPointStats.cpp  TrialPointStats.hpp  makefile
src/Attribute/: WriteAttributeDefinitionFile.cpp  cacheAttributesDefinition.hpp  cacheAttributesDefinition.txt  deprecatedAttributesDefinition.hpp  deprecatedAttributesDefinition.txt  displayAttributesDefinition.hpp  displayAttributesDefinition.txt  evalAttributesDefinition.hpp  evalAttributesDefinition.txt  evaluatorControlAttributesDefinition.hpp  evaluatorControlAttributesDefinition.txt  evaluatorControlGlobalAttributesDefinition.hpp  evaluatorControlGlobalAttributesDefinition.txt  makefile  pbAttributesDefinition.hpp  pbAttributesDefinition.txt  runAttributesDefinition.hpp  runAttributesDefinition.txt  runAttributesDefinitionCOOP.hpp  runAttributesDefinitionCOOP.txt  runAttributesDefinitionCS.hpp  runAttributesDefinitionCS.txt  runAttributesDefinitionDMulti.hpp  runAttributesDefinitionDMulti.txt  runAttributesDefinitionDisco.hpp  runAttributesDefinitionDisco.txt  runAttributesDefinitionIBEX.hpp  runAttributesDefinitionIBEX.txt  runAttributesDefinitionLH.hpp  runAttributesDefinitionLH.txt  runAttributesDefinitionNM.hpp  runAttributesDefinitionNM.txt  runAttributesDefinitionPSDSSD.hpp  runAttributesDefinitionPSDSSD.txt  runAttributesDefinitionQPSolver.hpp  runAttributesDefinitionQPSolver.txt  runAttributesDefinitionQuadModel.hpp  runAttributesDefinitionQuadModel.txt  runAttributesDefinitionSgtelibModel.hpp  runAttributesDefinitionSgtelibModel.txt  (+2 more)
src/Cache/: CacheBase.cpp  CacheBase.hpp  CacheSet.cpp  CacheSet.hpp  makefile
src/Eval/: BBInput.cpp  BBInput.hpp  BBOutput.cpp  BBOutput.hpp  Barrier.cpp  Barrier.hpp  BarrierBase.cpp  BarrierBase.hpp  BaseBarrier.cpp  ComparePriority.cpp  ComparePriority.hpp  ComputeSuccessType.cpp  ComputeSuccessType.hpp  Eval.cpp  Eval.hpp  EvalPoint.cpp  EvalPoint.hpp  EvalQueuePoint.cpp  EvalQueuePoint.hpp  Evaluator.cpp  Evaluator.hpp  EvaluatorControl.cpp  EvaluatorControl.hpp  EvcMainThreadInfo.cpp  EvcMainThreadInfo.hpp  MeshBase.cpp  MeshBase.hpp  ProgressiveBarrier.cpp  ProgressiveBarrier.hpp  SuccessStats.cpp  SuccessStats.hpp  makefile
src/Interfaces/: NomadStdCInterface.cpp  NomadStdCInterface.h
src/Math/: ArrayOfDouble.cpp  ArrayOfDouble.hpp  ArrayOfPoint.cpp  ArrayOfPoint.hpp  Direction.cpp  Direction.hpp  Double.cpp  Double.hpp  LHS.cpp  LHS.hpp  MathUtils.cpp  MathUtils.hpp  MatrixUtils.cpp  MatrixUtils.hpp  Point.cpp  Point.hpp  RNG.cpp  RNG.hpp  RandomPickup.cpp  RandomPickup.hpp  makefile
src/Nomad/: makefile  nomad.cpp  nomad.hpp
src/Output/: OutputDirectToFile.cpp  OutputDirectToFile.hpp  OutputInfo.cpp  OutputInfo.hpp  OutputQueue.cpp  OutputQueue.hpp  StatsInfo.cpp  StatsInfo.hpp  makefile
src/Param/: AllParameters.cpp  AllParameters.hpp  Attribute.cpp  Attribute.hpp  AttributeFactory.hpp  CacheParameters.cpp  CacheParameters.hpp  DeprecatedParameters.cpp  DeprecatedParameters.hpp  DisplayParameters.cpp  DisplayParameters.hpp  EvalParameters.cpp  EvalParameters.hpp  EvaluatorControlGlobalParameters.cpp  EvaluatorControlGlobalParameters.hpp  EvaluatorControlParameters.cpp  EvaluatorControlParameters.hpp  ParameterEntries.cpp  ParameterEntries.hpp  ParameterEntry.cpp  ParameterEntry.hpp  Parameters.cpp  Parameters.hpp  ParametersNomad3.cpp  ParametersNomad3.hpp  PbParameters.cpp  PbParameters.hpp  RunParameters.cpp  RunParameters.hpp  TypeAttribute.hpp  makefile
src/Type/: BBInputType.cpp  BBInputType.hpp  BBOutputType.cpp  BBOutputType.hpp  CallbackType.cpp  CallbackType.hpp  CompareType.cpp  CompareType.hpp  ComputeType.cpp  ComputeType.hpp  DMultiMadsSearchStrategyType.cpp  DMultiMadsSearchStrategyType.hpp  DirectionType.cpp  DirectionType.hpp  EvalSortType.cpp  EvalSortType.hpp  EvalType.cpp  EvalType.hpp  LHSearchType.cpp  LHSearchType.hpp  ListOfVariableGroup.cpp  ListOfVariableGroup.hpp  SgtelibModelFeasibilityType.cpp  SgtelibModelFeasibilityType.hpp  SgtelibModelFormulationType.cpp  SgtelibModelFormulationType.hpp  StepType.cpp  StepType.hpp  makefile
src/Util/: AllStopReasons.cpp  AllStopReasons.hpp  ArrayOfString.cpp  ArrayOfString.hpp  Clock.cpp  Clock.hpp  Copyright.hpp  Exception.cpp  Exception.hpp  MicroSleep.hpp  StopReason.cpp  StopReason.hpp  Uncopyable.cpp  Uncopyable.hpp  defines.cpp  defines.hpp  fileutils.cpp  fileutils.hpp  makefile  utils.cpp  (+1 more)
(+3387 files in other folders)
