add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/basic/library/example1)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/basic/library/example2)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/basic/library/example3)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/advanced/library/exampleForCustomHComputation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/advanced/library/FixedVariable)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/advanced/library/NMonly)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/advanced/library/Restart)